Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-407

traffic_server not using proxy.config.syslog_facility

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 5.2.0
    • Core
    • None

    Description

      We have this code in Main.cc:

      static int syslog_facility = LOG_DAEMON;

      // static void syslog_log_configure()
      //
      // Reads the syslog configuration variable
      // and sets the global integer for the
      // facility and calls open log with the
      // new facility
      //
      static void
      syslog_log_configure()
      {
      char *facility_str = NULL;
      int facility;

      TS_ReadConfigStringAlloc(facility_str, "proxy.config.syslog_facility");

      if (facility_str == NULL || (facility = facility_string_to_int(facility_str)) < 0)

      { syslog(LOG_WARNING, "Bad or missing syslog facility. " "Defaulting to LOG_DAEMON"); }

      else

      { syslog_facility = facility; closelog(); openlog("traffic_server", LOG_PID | LOG_NDELAY | LOG_NOWAIT, facility); }

      }

      But as far as I can tell, we never use syslog_facility.

      Attachments

        Activity

          People

            zwoop Leif Hedstrom
            zwoop Leif Hedstrom
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: