TS-407 Cleanup the syslog facility setup for traffic_server